--- a/src/components/NSMCalc/calc.css
+++ b/src/components/NSMCalc/calc.css
@@ -27,3 +27,26 @@
 .radio-wrapper .radio-group .no-radio {
   margin-right: 20px;
 }
+
+.radio-image-wrapper {
+  display: inline-block;
+  margin-right: 25px;
+}
+
+.radio-image {
+  width: 100px;
+  height: 120px;
+  background-size: cover;
+  border-radius: 8px;
+  box-shadow: 0px 0px 1px 1px #00000021;
+  margin-bottom: 10px;
+}
+
+.incision-image {
+  width: 200px;
+  height: 240px;
+  background-size: cover;
+  border-radius: 8px;
+  box-shadow: 0px 0px 1px 1px #00000021;
+  margin-bottom: 10px;
+}
