--- a/src/components/NSMCalc/calc.css
+++ b/src/components/NSMCalc/calc.css
@@ -36,16 +36,16 @@
 .radio-image {
   width: 100px;
   height: 120px;
-  background-size: cover;
+  background-size: contain;
   border-radius: 8px;
   box-shadow: 0px 0px 1px 1px #00000021;
   margin-bottom: 10px;
 }
 
 .incision-image {
-  width: 200px;
-  height: 240px;
-  background-size: cover;
+  width: 300px;
+  height: 360px;
+  background-size: contain;
   border-radius: 8px;
   box-shadow: 0px 0px 1px 1px #00000021;
   margin-bottom: 10px;
