--- a/src/components/NSMCalc/calc.css
+++ b/src/components/NSMCalc/calc.css
@@ -50,3 +50,25 @@
   box-shadow: 0px 0px 1px 1px #00000021;
   margin-bottom: 10px;
 }
+
+.submit-btn {
+  margin-top: 15px !important;
+}
+
+.calc-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: white;
+    z-index: 100;
+}
+
+.calculating-overlay {
+  padding: 40px;
+}
+
+.results-overlay {
+  padding: 40px;
+}
